fix(web): finetuning in docker-compose

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -7,7 +7,7 @@ CRUX_UI_URL=http://localhost:8000
 # podman has different alias host.containers.local:5000
 # for local development replace this with localhost:5000
 CRUX_AGENT_ADDRESS=host.docker.internal:5000
-CRUX_AGENT_IMAGE=stable
+CRUX_AGENT_IMAGE=latest
 JWT_SECRET=jwt-secret-token
 
 # install script docker pull disabled for the e2e tests
