feat(crux): add pino logger, and small config refactors (#594)
Co-authored-by: Mate Vago <mate.vago.it@gmail.com>

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -1,26 +1,30 @@
+NODE_ENV=development
+
 # Application configs
 KRATOS_URL=http://localhost:4433
 KRATOS_ADMIN_URL=http://localhost:4434
 KRATOS_URL=http://localhost:8000/kratos
 DATABASE_URL="postgresql://crux:crux@localhost:5432/crux?schema=public"
 CRUX_UI_URL=http://localhost:8000
-# podman has different alias host.containers.local:5000
+# Port settings
+GRPC_AGENT_PORT=5000
+HTTP_API_PORT=1848
+
+# Podman has different alias host.containers.local:5000
 # for local development replace this with localhost:5000
 CRUX_AGENT_ADDRESS=host.docker.internal:5000
 CRUX_AGENT_IMAGE=latest
 JWT_SECRET=jwt-secret-token
 
-# install script docker pull disabled for the e2e tests
+# Install script docker pull disabled for the E2E tests
 AGENT_INSTALL_SCRIPT_DISABLE_PULL=true
 
-LOG_LEVEL=verbose
-
-GRPC_AGENT_PORT=5000
-HTTP_API_PORT=1848
+# Possible values: trace, debug, info, warn, error, and fatal
+LOG_LEVEL=debug
 
 # Email service config
 SMTP_URI=smtps://test:test@localhost:1025/?skip_ssl_verify=true&legacy_ssl=true
-FROM_EMAIL=<email_address>
+FROM_EMAIL=noreply@dyrector.io
 FROM_NAME="dyrector.io Platform"
 
 # Google recaptcha config
@@ -28,7 +32,5 @@ DISABLE_RECAPTCHA=true
 # required only when rechaptcha is enabled
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
-NODE_ENV=development
-
 # overriding the node dns result order regardless of the NODE_ENV value
-#DNS_DEFAULT_RESULT_ORDER=ipv4first
+# DNS_DEFAULT_RESULT_ORDER=ipv4first
