feat(ci): add yamlfmt validation, update cosign

--- a/.github/workflows/image-tester.yml
+++ b/.github/workflows/image-tester.yml
@@ -16,7 +16,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-4
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-5
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-4
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-5
     if: github.ref_name == 'develop'
     environment: Workflow - Protected
     steps:
@@ -56,6 +56,6 @@ jobs:
         run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
       - name: Sign container image
         run: |
-          cosign sign --key cosign.key ${GITHUB_REGISTRY}/${TESTER_IMAGE_NAME}:latest
+          cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${GITHUB_REGISTRY}/${TESTER_IMAGE_NAME}:latest )
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
