--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -12,7 +12,7 @@ permissions:
 env:
   GITHUB_REGISTRY: ghcr.io
   BUILDER_IMAGE_NAME: dyrector-io/dyrectorio/alpine-proto
-  VERSION: 3.17-4
+  VERSION: 3.17-5
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -59,6 +59,6 @@ jobs:
         run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
       - name: Sign container image
         run: |
-          ~/go/bin/cosign sign --key cosign.key ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION}
+          ~/go/bin/cosign sign --yes --key cosign.key $(docker inspect --format='{{index .RepoDigests 0}}' ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} )
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
