--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -3,10 +3,14 @@ on:
   pull_request:
     types: [edited, opened, synchronize, reopened]
 jobs:
+  # Check if the pull request is a fork.
   check_repository_origin:
     runs-on: ubuntu-22.04
+    outputs:
+      fork: ${{ steps.check_repository_origin.outputs.fork }}
     steps:
       - name: Check if PR is from a fork
+        id: check_repository_origin
         run: |
           if [ "${{ github.event.pull_request.head.repo.full_name }}" == "${{ github.event.pull_request.base.repo.full_name }}" ]; then
             echo "Pull Request is from the original repository."
@@ -15,7 +19,7 @@ jobs:
             echo "Pull Request is from a forked repository."
             echo "fork=true" >> $GITHUB_OUTPUT
           fi
-
+  # Add source labels to the PR
   label_based_on_source_lang:
     permissions:
       contents: read
@@ -27,6 +31,7 @@ jobs:
       - uses: actions/labeler@v4
         with:
           configuration-path: .github/config/labeler.yml
+  #  Add scope and pr type labels
   label_based_on_title:
     permissions:
       contents: read
