--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -26,7 +26,7 @@ jobs:
       pull-requests: write
     needs: check_repository_origin
     runs-on: ubuntu-22.04
-    if: ${{ steps.check_repository_origin.outputs.fork == 'false' }}
+    if: ${{ needs.check_repository_origin.outputs.fork == 'false' }}
     steps:
       - uses: actions/labeler@v4
         with:
@@ -38,7 +38,7 @@ jobs:
       pull-requests: write
     needs: check_repository_origin
     runs-on: ubuntu-22.04
-    if: ${{ (steps.check_repository_origin.outputs.fork == 'false') }}
+    if: ${{ (needs.check_repository_origin.outputs.fork == 'false') }}
     steps:
       - uses: github/issue-labeler@v3.1
         with:
