--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -314,13 +314,8 @@ jobs:
       - name: Generate prisma & build the application
         run: |
           npx prisma generate
-      # fixes: fatal: unsafe repository
-      - name: Adding workspace
-        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - name: Running unit tests
-        uses: ArtiomTr/jest-coverage-report-action@v2
-        with:
-          working-directory: ${{ env.CRUX_WORKING_DIRECTORY }}
+        run: npm run test
       - name: Build the application
         run: |
           npm run build --if-present
