chore(crux-ui): remove needless buildstep from dockerfile

--- a/web/crux-ui/Dockerfile
+++ b/web/crux-ui/Dockerfile
@@ -1,24 +1,18 @@
-# stage 1, dep install
-FROM node:19.2-alpine AS DEPS
-WORKDIR /app
-
-RUN apk add --no-cache libc6-compat nasm autoconf automake bash libltdl libtool gcc make g++ zlib-dev
-COPY package.json package-lock.json ./
-RUN npm ci --no-fund
-
-# stage 2, build app
-FROM node:19.2-alpine AS BUILDER
+# stage 1, build app
+FROM docker.io/library/node:19.2-alpine AS BUILDER
 WORKDIR /app
 
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
 
-COPY --from=DEPS /app/node_modules ./node_modules
+COPY ./package.json ./package-lock.json ./
+RUN npm ci --no-fund
+
 COPY . .
 RUN npm run build
 
-# stage 3, run the app
-FROM node:19.2-alpine AS RUNNER
+# stage 2, run the app
+FROM docker.io/library/node:19.2-alpine AS RUNNER
 WORKDIR /app
 
 ENV NODE_ENV production
