--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -25,6 +25,9 @@
     "start": "npm run dev",
     "test:e2e": "playwright test",
     "test:e2e-debug": "playwright test --debug",
+    "test:unit": "jest",
+    "test:unit-watch": "jest --watch",
+    "test:unit-cov": "jest --coverage",
     "install:x64": "npm install --target_arch=x64"
   },
   "dependencies": {
@@ -50,7 +53,9 @@
   "devDependencies": {
     "@playwright/test": "^1.31.1",
     "@types/google-protobuf": "^3.15.6",
+    "@types/jest": "^29.5.1",
     "@types/jsoneditor": "^9.9.0",
+    "@types/node": "^20.1.5",
     "@types/openpgp": "^4.4.18",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.26",
@@ -70,11 +75,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
     "playwright": "^1.31.1",
     "postcss": "^8.4.23",
     "prettier": "^2.8.1",
     "prettier-plugin-organize-imports": "^3.2.1",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.4"
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
