--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -26,13 +26,15 @@ jobs:
           fi
   # Auto assigne reviewers and PR author
   add-reviews:
-    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    runs-on: ubuntu-22.04
     if: ${{ needs.check_repository_origin.outputs.fork == 'false' }}
     steps:
       - uses: kentaro-m/auto-assign-action@v1.2.5
         with:
-          configuration-path: '.github/config/auto-assign.yml'
-
+          configuration-path: .github/config/auto-assign.yml
   # Add source labels to the PR
   label_based_on_source_lang:
     permissions:
