--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -26,9 +26,7 @@ jobs:
           fi
   # Auto assigne reviewers and PR author
   add-reviews:
-    permissions:
-      contents: read
-      pull-requests: write
+    needs: check_repository_origin
     runs-on: ubuntu-22.04
     if: ${{ needs.check_repository_origin.outputs.fork == 'false' }}
     steps:
