--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -25,9 +25,9 @@
     "start": "npm run dev",
     "test:e2e": "playwright test",
     "test:e2e-debug": "playwright test --debug",
-    "test:unit": "jest",
-    "test:unit-watch": "jest --watch",
-    "test:unit-cov": "jest --coverage",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
     "install:x64": "npm install --target_arch=x64"
   },
   "dependencies": {
