--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -15,7 +15,6 @@
   "homepage": "https://github.com/dyrector-io/dyrectorio#readme",
   "scripts": {
     "dev": "next dev --hostname 0.0.0.0",
-    "prod": "next start",
     "disable-telemetry": "next telemetry disable",
     "lint": "next lint",
     "prettier": "prettier --check './**/*.tsx' './**/*.ts'",
@@ -23,6 +22,7 @@
     "format:win32": "prettier --write \"./**/*.tsx\" \"./**/*.ts\"",
     "build": "next build",
     "start": "npm run dev",
+    "start:prod": "next start",
     "test:e2e": "playwright test",
     "test:e2e-debug": "playwright test --debug",
     "test": "jest",
@@ -65,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
