fix: add missing LOG_LEVEL for project

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ TIMEZONE=UTC
 ACME_EMAIL=user@example.com
 NODE_ENV=production
 
+# crux service settings
+LOG_LEVEL=debug
+
 # Database passwords
 CRUX_POSTGRES_PASSWORD=Random_Generated_String
 KRATOS_POSTGRES_PASSWORD=Random_Generated_String
@@ -22,7 +25,7 @@ KRATOS_SECRET=Random_Generated_String
 # Mailserver settings
 SMTP_URI=smtps://username:password@mailserver.example.com:465
 FROM_EMAIL=from@example.com
-FROM_NAME=dyrectorio Platform
+FROM_NAME="dyrectorio Platform"
 
 # Recaptcha secrets
 # In case you don't want to use ReCAPTCHA set DISABLE_RECAPTCHA to true
