fix: add missing LOG_LEVEL for project

--- a/web/.env.example
+++ b/web/.env.example
@@ -15,7 +15,7 @@ KRATOS_LOG_LEAK_SENSITIVE_VALUES=true
 # SMTP Configs
 SMTP_URI=smtps://test:test@mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
 FROM_EMAIL=noreply@dyrector.io
-FROM_NAME="dyrector.io Platform"
+FROM_NAME=dyrector.io
 
 # MacOS dependencies
 # https://docs.docker.com/desktop/networking/#i-want-to-connect-from-a-container-to-a-service-on-the-host
