--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ KRATOS_SECRET=Random_Generated_String
 # Mailserver settings
 SMTP_URI=smtps://username:password@mailserver.example.com:465
 FROM_EMAIL=from@example.com
-FROM_NAME="dyrectorio Platform"
+FROM_NAME=dyrector.io
 
 # Recaptcha secrets
 # In case you don't want to use ReCAPTCHA set DISABLE_RECAPTCHA to true
