--- a/docker-compose.http-only.yaml
+++ b/docker-compose.http-only.yaml
@@ -21,6 +21,7 @@ services:
     command: [serve]
     environment:
       - TZ=${TIMEZONE:-UTC}
+      - LOG_LEVEL=${LOG_LEVEL:-debug}
       - NODE_ENV=${NODE_ENV}
       - DATABASE_URL=postgresql://crux:${CRUX_POSTGRES_PASSWORD}@crux-postgres:5432/crux?schema=public
       - KRATOS_ADMIN_URL=http://kratos:4434
